Reformatting dp_reports/

--- a/server/opendp_apps/dp_reports/templates/pdf_report/view_create_pdf_report.html
+++ b/server/opendp_apps/dp_reports/templates/pdf_report/view_create_pdf_report.html
@@ -1,14 +1,15 @@
-
 <h3>Create Release PDF</h3>
 
 <p>Copy Release JSON into the box below.</p>
 
 <form action="{% url 'view_create_pdf_report' %}" method="post">
-{% csrf_token %}
+    {% csrf_token %}
     <table style="padding: 20px; border: 0;">
-{{ form.as_table }}
-</table>
-</p><br/> <button type="reset">Reset</button> &nbsp;&nbsp;
-    <button type="submit">Make PDF</button></p>
+        {{ form.as_table }}
+    </table>
+    </p><br/>
+    <button type="reset">Reset</button> &nbsp;&nbsp;
+    <button type="submit">Make PDF</button>
+    </p>
 </form>
 
