--- a/server/templates/base-vue.html
+++ b/server/templates/base-vue.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@mdi/font@latest/css/materialdesignicons.min.css">
     <script src="https://apis.google.com/js/api:client.js"></script>
-    <script src="https://documentcloud.adobe.com/view-sdk/main.js"></script>
+    <!-- JS update 1/3/23 --><script src="https://documentservices.adobe.com/view-sdk/viewer.js"></script>
 <body>
 <noscript>
     <strong>We're sorry but client doesn't work properly without JavaScript enabled.
