--- a/server/templates/base-vue.html
+++ b/server/templates/base-vue.html
@@ -1,1 +1,25 @@
-<!DOCTYPE html><html lang="en"><head><meta charset="utf-8"><meta http-equiv="X-UA-Compatible" content="IE=edge"><meta name="viewport" content="width=device-width,initial-scale=1"><link rel="icon" href="/static/dist/favicon.ico"><title>client</title><link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900"><link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@mdi/font@latest/css/materialdesignicons.min.css"><script src="https://apis.google.com/js/api:client.js"></script><script src="https://documentcloud.adobe.com/view-sdk/viewer.js"></script><link href="/static/dist/css/chunk-01e74e59.1443b194.css" rel="prefetch"><link href="/static/dist/css/chunk-0c5173b2.015bb2da.css" rel="prefetch"><link href="/static/dist/css/chunk-0db0fd4a.889d8b54.css" rel="prefetch"><link href="/static/dist/css/chunk-17fe935a.2fb970e3.css" rel="prefetch"><link href="/static/dist/css/chunk-1f5671f8.6b921c05.css" rel="prefetch"><link href="/static/dist/css/chunk-2ae6152c.2222ebef.css" rel="prefetch"><link href="/static/dist/css/chunk-2b1ab8a2.90cc8ba1.css" rel="prefetch"><link href="/static/dist/css/chunk-363f1afc.29e1ce21.css" rel="prefetch"><link href="/static/dist/css/chunk-3adb5350.b9befef0.css" rel="prefetch"><link href="/static/dist/css/chunk-3b21fe40.d96a9df6.css" rel="prefetch"><link href="/static/dist/css/chunk-63e80375.af24386d.css" rel="prefetch"><link href="/static/dist/css/chunk-777bd3e4.80eeeb80.css" rel="prefetch"><link href="/static/dist/css/chunk-783d42a2.80eeeb80.css" rel="prefetch"><link href="/static/dist/css/chunk-c10becf2.7801c227.css" rel="prefetch"><link href="/static/dist/css/chunk-df9ea798.28a0db11.css" rel="prefetch"><link href="/static/dist/css/chunk-e1fee4ee.2fb970e3.css" rel="prefetch"><link href="/static/dist/css/chunk-f8752a8c.a6106e15.css" rel="prefetch"><link href="/static/dist/js/chunk-01e74e59.5afb6154.js" rel="prefetch"><link href="/static/dist/js/chunk-0c5173b2.cdb5ab93.js" rel="prefetch"><link href="/static/dist/js/chunk-0db0fd4a.7fcc495f.js" rel="prefetch"><link href="/static/dist/js/chunk-17fe935a.629cfa5d.js" rel="prefetch"><link href="/static/dist/js/chunk-1f5671f8.7f174edc.js" rel="prefetch"><link href="/static/dist/js/chunk-2ae6152c.008f7205.js" rel="prefetch"><link href="/static/dist/js/chunk-2b1ab8a2.48947dab.js" rel="prefetch"><link href="/static/dist/js/chunk-3169337a.d65dc31c.js" rel="prefetch"><link href="/static/dist/js/chunk-363f1afc.b982acf1.js" rel="prefetch"><link href="/static/dist/js/chunk-3adb5350.e680a5ad.js" rel="prefetch"><link href="/static/dist/js/chunk-3b21fe40.c1b9ab3a.js" rel="prefetch"><link href="/static/dist/js/chunk-578c6fb2.f6895cbd.js" rel="prefetch"><link href="/static/dist/js/chunk-63e80375.659c69b9.js" rel="prefetch"><link href="/static/dist/js/chunk-651c66a4.c9e7cac1.js" rel="prefetch"><link href="/static/dist/js/chunk-777bd3e4.e82be969.js" rel="prefetch"><link href="/static/dist/js/chunk-783d42a2.1e03dd75.js" rel="prefetch"><link href="/static/dist/js/chunk-c10becf2.c714bd78.js" rel="prefetch"><link href="/static/dist/js/chunk-df9ea798.8fb665e3.js" rel="prefetch"><link href="/static/dist/js/chunk-e1fee4ee.913003f6.js" rel="prefetch"><link href="/static/dist/js/chunk-f8752a8c.e57b6787.js" rel="prefetch"><link href="/static/dist/css/app.dd00cf7a.css" rel="preload" as="style"><link href="/static/dist/css/chunk-vendors.970b8e2d.css" rel="preload" as="style"><link href="/static/dist/js/app.3bbacc23.js" rel="preload" as="script"><link href="/static/dist/js/chunk-vendors.2e9f50dc.js" rel="preload" as="script"><link href="/static/dist/css/chunk-vendors.970b8e2d.css" rel="stylesheet"><link href="/static/dist/css/app.dd00cf7a.css" rel="stylesheet"></head><body><noscript><strong>We're sorry but client doesn't work properly without JavaScript enabled. Please enable it to continue.</strong></noscript><div id="app"></div><script src="/static/dist/js/chunk-vendors.2e9f50dc.js"></script><script src="/static/dist/js/app.3bbacc23.js"></script></body></html>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width,initial-scale=1.0">
+    <link rel="icon" href="http://127.0.0.1:8080/favicon.ico">
+    <title>client</title>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@mdi/font@latest/css/materialdesignicons.min.css">
+    <script src="https://apis.google.com/js/api:client.js"></script>
+    <!-- JS update 1/3/23 --><script src="https://documentservices.adobe.com/view-sdk/viewer.js"></script>
+<body>
+<noscript>
+    <strong>We're sorry but client doesn't work properly without JavaScript enabled.
+        Please enable it to continue.</strong>
+</noscript>
+<div id="app"></div>
+<!-- built files will be auto injected -->
+<script type="text/javascript" src="http://127.0.0.1:8080/js/chunk-vendors.js">
+
+</script>
+<script type="text/javascript" src="http://127.0.0.1:8080/js/app.js"></script>
+</body>
+</html>
