Rename DataSetInfo for #789

--- a/server/opendp_apps/async_messages/templates/async_messages/view_profile_test.html
+++ b/server/opendp_apps/async_messages/templates/async_messages/view_profile_test.html
@@ -26,7 +26,7 @@ Example of using async/websockets.
 <body style="margin:40px;">
 <h1>Profile Example</h1>
 
-<!-- Start: Table Listing DataSetInfo objects -->
+<!-- Start: Table Listing DatasetInfo objects -->
 <table class="table table-bordered">
     <thead>
     <tr>
@@ -78,7 +78,7 @@ Example of using async/websockets.
     {% endfor %}
     </tbody>
 </table>
-<!-- End: Table Listing DataSetInfo objects -->
+<!-- End: Table Listing DatasetInfo objects -->
 
 <h5>Response from initial Http POST</h5>
 <div id="postResult" style="border:1px solid #006699;margin:20px;">&nbsp;</div>
