--- a/server/templates/base-vue.html
+++ b/server/templates/base-vue.html
@@ -1,1 +1,25 @@
-<!doctype html><html lang="en"><head><meta charset="utf-8"><meta http-equiv="X-UA-Compatible" content="IE=edge"><meta name="viewport" content="width=device-width,initial-scale=1"><link rel="icon" href="/static/dist/favicon.ico"><title>client</title><link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900"><link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@mdi/font@latest/css/materialdesignicons.min.css"><script src="https://apis.google.com/js/api:client.js"></script><script src="https://documentcloud.adobe.com/view-sdk/viewer.js"></script><script defer="defer" src="/static/dist/js/chunk-vendors.86df7d53.js"></script><script defer="defer" src="/static/dist/js/app.539e049c.js"></script><link href="/static/dist/css/chunk-vendors.3e70d651.css" rel="stylesheet"><link href="/static/dist/css/app.f6864e4c.css" rel="stylesheet"></head><body><noscript><strong>We're sorry but client doesn't work properly without JavaScript enabled. Please enable it to continue.</strong></noscript><div id="app"></div></body></html>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width,initial-scale=1.0">
+    <link rel="icon" href="http://127.0.0.1:8080/favicon.ico">
+    <title>client</title>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@mdi/font@latest/css/materialdesignicons.min.css">
+    <script src="https://apis.google.com/js/api:client.js"></script>
+    <!-- JS update 1/3/23 --><script src="https://documentservices.adobe.com/view-sdk/viewer.js"></script>
+<body>
+<noscript>
+    <strong>We're sorry but client doesn't work properly without JavaScript enabled.
+        Please enable it to continue.</strong>
+</noscript>
+<div id="app"></div>
+<!-- built files will be auto injected -->
+<script type="text/javascript" src="http://127.0.0.1:8080/js/chunk-vendors.js">
+
+</script>
+<script type="text/javascript" src="http://127.0.0.1:8080/js/app.js"></script>
+</body>
+</html>
